[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Levels/EndLevel.gd" type="Script" id=1]
[ext_resource path="res://Fonts/i_pixel_u/I-pixel-u.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/HUD/Status/Status.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Buttons/Back/Back.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Buttons/Next/Next-Normal.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Buttons/Next/Next-Pressed.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Buttons/Reload/Reload-Normal.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Buttons/Reload/Reload-Pressed.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_bloom = 0.2
glow_blend_mode = 0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="EndLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="ResultTitle" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0392157, 0.741176, 0.776471, 1 )
text = "RESULT"
align = 1
valign = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Status" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 88 )

[node name="ScoreTitle" type="Label" parent="."]
margin_top = 158.0
margin_right = 200.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.917647, 0, 0.85098, 1 )
text = "SCORE"
align = 1
valign = 1

[node name="Score" type="Label" parent="."]
margin_top = 182.0
margin_right = 200.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.917647, 0, 0.85098, 1 )
text = "99999999"
align = 1
valign = 1

[node name="Back" parent="." instance=ExtResource( 4 )]
margin_left = 10.0
margin_top = 346.0
margin_right = 52.0
margin_bottom = 388.0

[node name="Next" type="TextureButton" parent="."]
editor/display_folded = true
visible = false
margin_left = 146.0
margin_top = 346.0
margin_right = 188.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 21, 21 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="Anim" type="AnimationPlayer" parent="Next"]
autoplay = "Idle"
anims/Idle = SubResource( 5 )

[node name="Reload" type="TextureButton" parent="."]
margin_left = 78.0
margin_top = 346.0
margin_right = 120.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 21, 21 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Reload" to="." method="_on_Reload_pressed"]
